--- a/app/src/App.css
+++ b/app/src/App.css
@@ -4,7 +4,7 @@ html,
 body {
   width: 100%;
   height: 100%;
-  font-family: "PP Neue Montreal";
+  font-family: "Satoshi";
   background-color: var(--color-bg);
   overflow-x: hidden;
 }
