--- a/app/src/components/GridSkills/gridSkills.css
+++ b/app/src/components/GridSkills/gridSkills.css
@@ -1,5 +1,9 @@
 .container-skils{
     width: 100%;
+    margin: 1rem;
+
     display: grid;
-    grid-template-columns: 33% 33% 33%;
+    grid-template-columns: auto auto auto auto;
+    gap:1rem;
+
 }
