--- a/app/src/components/gridProjects/gridProject.css
+++ b/app/src/components/gridProjects/gridProject.css
@@ -2,6 +2,7 @@
     display: grid;
     margin: 2rem;
     grid-template-columns: auto auto;
+    justify-content: space-around;
     gap: 5rem;
 }
   
