--- a/app/src/index.css
+++ b/app/src/index.css
@@ -2,7 +2,7 @@
   --color-azul: #a2fffa;
   --color-bg: #d8f7ff;
   --color-accent: #ffffff;
-  --color-bg: #1d1d1d;
+  --color-bg: #000000;
 
   --font-max-large: 6.25rem;
   --font-large: 4rem;
