--- a/app/src/components/BannerName/BannerName.css
+++ b/app/src/components/BannerName/BannerName.css
@@ -1,16 +1,20 @@
 .banner{
     width: 100%;
     margin-top: 2%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    position: relative;
 }
 
 .container-banner{
     width: 100%;
+    top:10%;
+    position: absolute;
     display: flex;  
     align-items: center;
     justify-content: space-around;
+}
+.container-scene{
+    height: 100dvh;
+    border: solid 1px;
 }
 
 .image-banner{
