--- a/src/components/GridSkills/gridSkills.css
+++ b/src/components/GridSkills/gridSkills.css
@@ -3,6 +3,25 @@
 
     display: grid;
     grid-template-columns: auto auto auto auto;
+    grid-template-rows: 10rem 10rem;
     gap:1rem;
 
+}
+
+@media(max-width: 1400px) {
+    .container-skils{
+        grid-template-columns:auto auto auto
+    }
+}
+
+@media(max-width: 991px) {
+    .container-skils{
+        grid-template-columns:auto auto 
+    }
+}
+
+@media(max-width: 480px) {
+    .container-skils{
+        grid-template-columns:auto  
+    }
 }
