--- a/src/components/ProjectsGrid/GridProject.css
+++ b/src/components/ProjectsGrid/GridProject.css
@@ -5,4 +5,11 @@
     justify-content: space-around;
     gap: 5rem;
 }
-  
+
+@media(max-width: 991px) {   
+.Projects {
+
+    grid-template-columns: 90%;
+ 
+}
+}
