--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -21,7 +21,6 @@ nav {
     font-size: 16px;
     text-transform: none;
     color: var(--color-bg);
-    border-bottom: solid .0625rem var(--color-bg);
 
 
   }
@@ -42,4 +41,19 @@ nav {
   nav button.active {
     opacity: 0.35;
   }
+  
+
+  .nav-item  a:before {
+    content: "";
+    position: absolute;
+    inset: calc(100% - .0625rem) 0 0 0; 
+    background: var(--color-bg); /* the color */
+    scale: 0 1;
+    transition: .3s, translate 0s .3s;
+  }
+  .nav-item:hover a:before {
+    scale: 2;
+  }
+ 
+
   
