--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,32 +1,29 @@
 nav {
-    
-
     padding: 1em;
     display: flex;
     width: 100%;
     justify-content: space-around;
     z-index: 100000;
     background-color:var(--color-accent);
-  }
+}
   
-  .nav-item {
+.nav-item {
     flex: 1;
     padding: 0.25em 1em;
     text-align: center;
   
-  }
+}
   
-  .nav-item a {
+.nav-item a {
     position: relative;
     font-size: 16px;
     text-transform: none;
     color: var(--color-bg);
 
-
-  }
+}
   
  
-  nav button {
+nav button {
     background: none;
     border: none;
     outline: none;
@@ -36,24 +33,25 @@ nav {
     padding: 0.5em 1em;
     cursor: pointer;
     
-  }
+}
   
-  nav button.active {
+nav button.active {
     opacity: 0.35;
-  }
+}
   
 
-  .nav-item  a:before {
+.nav-item  a:before {
     content: "";
     position: absolute;
     inset: calc(100% - .0625rem) 0 0 0; 
-    background: var(--color-bg); /* the color */
+    background: var(--color-bg); 
     scale: 0 1;
     transition: .3s, translate 0s .3s;
-  }
-  .nav-item:hover a:before {
-    scale: 2;
-  }
+}
+
+.nav-item:hover a:before {
+  scale: 2;
+}
  
 
   
