--- a/src/components/BannerName/BannerName.css
+++ b/src/components/BannerName/BannerName.css
@@ -40,3 +40,14 @@
     justify-self: end;
     display: flex;
 }
+
+@media (max-width: 600px) {
+    .image-banner{
+        max-width:  10rem;
+        max-height: 10rem;
+        height: 60%;
+        
+    
+    }   
+}
+  
