--- a/src/components/BannerName/BannerName.css
+++ b/src/components/BannerName/BannerName.css
@@ -14,7 +14,6 @@
 }
 .container-scene{
     height: 100dvh;
-    border: solid 1px;
 }
 
 .image-banner{
@@ -45,11 +44,15 @@
 .text-image li{
     list-style-type: none;
 }
-@media(max-width: 991px) {   
+@media(max-width: 480px) {   
     .image-banner{
         max-width: 10rem;
         max-height: 10rem;
         height: 50%;
     }
-   
+    .container-scene{
+        height: 100%;
+        border: solid red 1px;
+    }
+    
 }
