--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
     width: 100%;
     justify-content: space-around;
     z-index: 100000;
-    background-color:var(--color-accent);
+ 
 }
 .mobile {
     display: none;
@@ -23,18 +23,26 @@
   
 .nav-item a {
     position: relative;
-    font-size: 16px;
+    font-size: 26px;
     text-transform: none;
-    color: var(--color-bg);
+    color: var(--color-accent);
+    text-shadow: 2px 2px;
+    transition: 0.5s ease-in-out ;
+
 
 }
+.nav-item a:hover {
+     text-shadow: 0.1px 0px;
+}
+
+
   
  
 nav button {
     background: none;
     border: none;
     outline: none;
-    color: var(--color-bg);
+    color: var(--color-accent);
     text-transform: uppercase;
     font-size: 12px;
     padding: 0.5em 1em;
@@ -44,6 +52,8 @@ nav button {
   
 nav button.active {
     opacity: 0.35;
+      
+
 }
   
 
@@ -51,7 +61,7 @@ nav button.active {
     content: "";
     position: absolute;
     inset: calc(100% - .0625rem) 0 0 0; 
-    background: var(--color-bg); 
+    background: var(--color-accent); 
     scale: 0 1;
     transition: .3s, translate 0s .3s;
 }
