--- a/src/components/TextBanner/TextBanner.css
+++ b/src/components/TextBanner/TextBanner.css
@@ -10,6 +10,8 @@
     text-transform: uppercase;
     overflow-x: hidden;
     color: var(--color-accent);
+    text-shadow: 2px 2px;
+
   }
   
   .track {
