--- a/src/components/GridSkills/gridSkills.css
+++ b/src/components/GridSkills/gridSkills.css
@@ -9,6 +9,12 @@
     display: flex;
     justify-content: center;
 }
+.container-skils{
+    border-top: dashed var(--color-accent) 5px;
+    border-bottom: dashed var(--color-accent) 5px;
+    padding: 1rem 0rem 1rem 0rem;
+    margin-bottom:4rem;
 
+}
 
 
