--- a/src/components/GridSkills/Skills-Table/Skills/skills.css
+++ b/src/components/GridSkills/Skills-Table/Skills/skills.css
@@ -3,13 +3,13 @@
     display: flex;
     flex-direction: column;
     border: dashed var(--color-accent) 0.5px;
-    width: 20rem;
-    padding: 1.25rem;
+    width: 18rem;
+    padding: 0.5rem;
     transition: 1s ease-in-out;
+    box-shadow: 1px 3px 3px 0px var(--color-accent);
+    font-size: 2rem;
 }
-.skill-card:hover{
-    transform: translateY(10px) scale(110%) ;
-}
+
 .skill-title{
     width: 100%;
     text-align: center;
@@ -18,7 +18,26 @@
     
 
 }
-
+.skill-conteudo p{
+  font-size: 1rem;
+}
+.skill-conteudo span {
+  display: inline-block;
+}
 .skill-conteudo {
     margin-top: 10px;
+    transition: ease 1s all;
+}
+.skill-conteudo  span:hover{
+    animation: slide-in 0.5s alternate-reverse infinite;
+}
+
+@keyframes slide-in {
+  from {
+    transform: translateX(0%);
+  }
+
+  to {
+    transform: translateX(-2%);
+  }
 }
