--- a/src/components/GridSkills/gridSkills.css
+++ b/src/components/GridSkills/gridSkills.css
@@ -1,6 +1,6 @@
 
 .grid-skils{
-    background-image: url("https://64.media.tumblr.com/c2fca77d8fd87567e4595f9c14ec924d/325afa28ed8a41bb-72/s1280x1920/78e62251f8818340af152e8f63b94ead56850372.gif");
+    background-image: url("..\..\assets\GIF\tumblr_c2fca77d8fd87567e4595f9c14ec924d_78e62251_1280.webp");
     background-size: cover;
     text-shadow:
         -2px -2px 0 black,
