--- a/src/components/TextBanner/TextBanner.css
+++ b/src/components/TextBanner/TextBanner.css
@@ -3,16 +3,27 @@
     position: relative;
     width: 100vw;
     max-width: 100%;
-    height: 240px;
+    height: 15rem;
     display: flex;
     align-items: center;
-    font-size: 140px;
+    font-size: 8.75rem;
     text-transform: uppercase;
     overflow-x: hidden;
     color: var(--color-accent);
-    text-shadow: 2px 2px;
+    text-shadow: .125rem .125rem;
 
   }
+
+  
+@media(max-width: 480px) {   
+    .text-banner {
+        height: 10rem;
+        
+    }
+   
+ 
+}
+  
   
   .track {
     position: absolute;
