--- a/src/components/BannerName/BannerName.css
+++ b/src/components/BannerName/BannerName.css
@@ -3,7 +3,7 @@
     margin-top: 2%;
     position: relative;
     margin: 0rem;
-    background-image: url("..\..\assets\GIF\tumblr_c2fca77d8fd87567e4595f9c14ec924d_78e62251_1280.webp");
+    background-image: url("..\..\assets\GIF\windows-11-dark-mode-abstract-background-black-background-2560x1440-8710.jpg");
     background-size: cover;
     text-shadow:
         -2px -2px 0 black,
