--- a/src/components/GridSkills/gridSkills.css
+++ b/src/components/GridSkills/gridSkills.css
@@ -1,6 +1,6 @@
 
 .grid-skils{
-    background-image: url("..\..\..\public\gif\tumblr_c2fca77d8fd87567e4595f9c14ec924d_78e62251_1280.webp");
+    background-image: url("../../../public/gif/tumblr_c2fca77d8fd87567e4595f9c14ec924d_78e62251_1280.webp");
     background-size: cover;
     text-shadow:
         -2px -2px 0 black,
