--- a/src/components/BannerName/BannerName.css
+++ b/src/components/BannerName/BannerName.css
@@ -11,7 +11,10 @@
         -1px  2px 0 black,
         2px  3px 0 black;
 }
-
+canvas {
+  image-rendering: pixelated;
+  transform: scale(0.8); /* reduz carga sem diminuir qualidade visual */
+}
 .container-banner{
     width: 100%;
     top:10%;
