--- a/src/components/Loader/loader.css
+++ b/src/components/Loader/loader.css
@@ -19,7 +19,7 @@
 .overlay {
 
     width: 100%;
-    max-width: 120rem;
+    max-width: 100vw;
     height: 100vh;
     background: rgb(0, 0, 0);
     display: flex;
@@ -78,7 +78,7 @@
 
 .counter,
 .logo p {
-    font-size: 200px;
+    font-size: 12.5rem;
     text-align: center;
     text-transform: uppercase;
     color: rgb(255, 255, 255);
