--- a/src/components/BannerName/BannerName.css
+++ b/src/components/BannerName/BannerName.css
@@ -12,8 +12,7 @@
         2px  3px 0 black;
 }
 canvas {
-  image-rendering: pixelated;
-  transform: scale(0.8); /* reduz carga sem diminuir qualidade visual */
+  image-rendering: initial;
 }
 .container-banner{
     width: 100%;
@@ -70,6 +69,14 @@ canvas {
     }
     .container-scene{
         height: 100%;
+    }
+    
+}
+
+
+@media(min-width: 1920px) {   
+    canvas {
+        image-rendering: pixelated;
     }
     
 }
