--- a/src/components/BannerName/BannerName.css
+++ b/src/components/BannerName/BannerName.css
@@ -74,8 +74,9 @@ canvas {
 }
 
 
-@media(min-width: 1920px) {   
+@media(min-width: 1950px) {   
     canvas {
+        transform: scale(0.5);
         image-rendering: pixelated;
     }
     
